--- a/views/index.html
+++ b/views/index.html
@@ -48,6 +48,7 @@
             margin-top: 10px;
         }
     </style>
+    <script src="/script.js"></script>
 </head>
 <body>
     <h1>Library Management System</h1>
@@ -74,224 +75,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     
-    <script>
-        let borrowedBooks = [];
-        let returnedBooks = [];
-        //let totalFineAmount = 0;
-
-        async function issueBook(event){
-            try{
-                event.preventDefault();
-
-                const bookName = document.getElementById('bname').value;
-
-                const serverResponse = await axios.post('http://localhost:3000/library', {title: bookName});
-            
-
-                console.log(bookName);
-
-                const newBook = {
-                    title: serverResponse.data.title,
-                    borrowedAt: new Date(),
-                    returnBy: new Date(Date.now() + 60 * 60 * 1000),
-                    fineAmount: 0
-                };
-
-                borrowedBooks.push(newBook);
-                showDataOnScreen();
-                document.getElementById('bname').value = '';
-            } catch(error){
-                document.body.innerHTML=document.body.innerHTML+'<h4>Something Went Wrong</h4>';
-                console.log(error);
-            }
-        }
-
-        window.addEventListener('DOMContentLoaded', async () => {
-            try{
-                const res = await axios.get('http://localhost:3000/library');
-
-                console.log(res.data);
-
-                borrowedBooks = res.data.map(book => ({
-                    ...book,
-                    borrowedAt: new Date(book.borrowedAt).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' }),
-                    returnBy: new Date(book.returnBy).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' }),
-                }));
-
-                showDataOnScreen();
-                // for(let i=0;i<res.data.length;i++){
-                //     showDataOnScreen(res.data[i]);
-                //     console.log('reached', res.data[i]);
-                // }
-                
-            } catch (error){
-                document.body.innerHTML=document.body.innerHTML+'<h4>Something Went Wrong</h4>';
-                console.log(error);
-            }
-        })
-
-        function showDataOnScreen(){
-            // const bookInfoDiv = document.getElementById('bookInfo');
-            // bookInfoDiv.innerHTML = '';
-            const borrowedBooksContainer = document.getElementById('borrowedBooks');
-            const returnedBooksContainer = document.getElementById('returnedBooksContainer');
-            //let sectionCounter = 1;
-
-            borrowedBooksContainer.innerHTML = '';
-            returnedBooksContainer.innerHTML = '';
-
-            borrowedBooks.forEach(book => {
-                const bookSection = createBookSection(book, false);
-                borrowedBooksContainer.appendChild(bookSection);
-            });
-
-            returnedBooks.forEach(book => {
-                const returnedBookSection = createReturnedBookSection(book);
-                returnedBooksContainer.appendChild(returnedBookSection);
-            });
-            
-
-            // calculateFine();
-            // hidePayFineOptionForZeroFine()
-        }
-
-        function createBookSection(book, isReturned) {
-            const bookSection = document.createElement('div');
-            bookSection.classList.add('bookSection');
-
-            const bookInformation = document.createElement('div');
-            bookInformation.classList.add('bookInformation');
-
-            const fineAmount = calculateFineForBook(book);
-
-            bookInformation.innerHTML = `<p>Book Name: ${book.title}</p>
-                                            <p>Borrowed At: ${book.borrowedAt}</p>
-                                            <p>Return By: ${book.returnBy}</p>
-                                            ${isReturned ? `<p>'Returned At' : ${new Date(book.returnedAt).toLocaleString('en-In', { timeZone: 'Asia/Kolkata' })}</p>` : ''}
-                                            <p class="fineAmount">Fine Amount: ${fineAmount} Rupees</p>
-                                    <button onclick="returnBook(${borrowedBooks.indexOf(book)})">Return Book</button>`;
-                                            
-
-            bookSection.appendChild(bookInformation);
-
-            book.element = bookSection;
-
-            return bookSection;
-        }
-
     
-
-        function createReturnedBookSection(book) {
-            const returnedBookSection = document.createElement('div');
-            returnedBookSection.classList.add('bookSection');
-
-            const bookInformation = document.createElement('div');
-            bookInformation.classList.add('bookInformation');
-            bookInformation.innerHTML = `<p>Book Name: ${book.title}</p>
-                                        <p>Fine Amount: ${book.fineAmount} Rupees</p>
-                                        <p>Returned At: ${new Date(book.returnedAt).toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' })}</p>`;
-            
-            returnedBookSection.appendChild(bookInformation);
-
-            return returnedBookSection;
-        }
-
-       
-
-        
-        async function returnBook(index) {
-            const returnedBook = borrowedBooks[index];
-            //console.log(returnedBook);
-
-            const fineAmount = calculateFineForBook(returnedBook);
-            console.log(fineAmount);
-
-            returnedBook.fineAmount = fineAmount;
-
-            returnedBook.returnedAt = new Date();
-            //console.log(returnedBook.fineAmount);
-
-            const borrowedBooksContainer = document.getElementById('borrowedBooks');
-            const returnedBookSection = returnedBook.element;
-            //console.log(returnedBookSection)
-
-
-            // Clear the existing content of the returned book section
-            
-            
-            if (returnedBook.fineAmount > 0) {
-                
-                returnedBookSection.innerHTML = '';
-                
-                // If fine amount is greater than 0, show pay fine button and amount
-                const payFineButton = document.createElement('button');
-                payFineButton.textContent = `Pay Fine`;
-                payFineButton.onclick = () => payFine(index);
-
-                const fineAmountInput = document.createElement('input');
-                fineAmountInput.type = "number";
-                fineAmountInput.className = 'fineAmountInput';
-                fineAmountInput.value = fineAmount;
-                
-                //console.log(fineAmountInput.value);
-                fineAmountInput.disabled = true;
-
-                returnedBookSection.appendChild(fineAmountInput);
-                returnedBookSection.appendChild(payFineButton);
-            } else {
-                // If no fine, move the book to returned book section without showing a message
-                borrowedBooks.splice(index, 1);
-                returnedBooks.push(returnedBook);
-                showDataOnScreen();
-
-                try{
-                    await axios.put('http://localhost:3000/library/${returnedBook.id}', {
-                        returnedAt: returnedBook.returnedAt, fineAmount
-                    });
-                } catch(error){
-                    console.error('Error updating database', error);
-                }
-            }
-
-            
-        }
-
-
-
-
-    async function payFine(index) {
-
-        const book = borrowedBooks[index];
-
-
-
-        const bookSection = book.element;
-        borrowedBooks.splice(index, 1);
-        returnedBooks.push(book);
-        showDataOnScreen();
-        
-    }
-
-        function calculateFineForBook(book){
-            const now = new Date();
-            const returnTime = book.returnedAt ? new Date(book.returnBy) : now;
-
-            const hoursLate = Math.floor((returnTime - new Date(book.returnBy)) / (60 * 60 * 1000));
-            
-            const fineAmount = hoursLate > 0 ? hoursLate * 10 : 0;
-            return fineAmount;
-        }
-
-        // async function markBookAsReturnedOnServer(bookId){
-        //     try{
-        //         await axios.put(`http://localhost:3000/library/${bookId}/return`);
-        //     } catch(error){
-        //         console.error('Error marking book as returned on the server: ', error);
-        //     }
-        // }
-
-
-
-    </script>
 </body>
 </html>
